Metadata/objects/Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for Invoice IT</description>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Value__c</fullName>
        <label>Percentage Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Picklist_Indicator__c</fullName>
        <label>Picklist Indicator</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Screen_Id__c</fullName>
        <label>Quick Screen Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Invoice IT Configuration</label>
</CustomObject>